# structurizr-python

./: .adr-dir  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: cron.yml  main.yml  release.yml
docs/: .pages  index.md  requirements.txt
docs/adr/: .pages  0001-record-architecture-decisions.md  0002-version-control-our-code.md  0003-python-3-6-only.md  0004-python-package-versioning.md  0005-code-quality-assurance.md  0006-code-testing.md  0008-package-structure.md  0009-use-pydantic-for-json-de-serialization.md
docs/development/: .pages
docs/development/adr/: .pages  0007-unit-tests.md
docs/reference/: .pages  structurizr.StructurizrClient.md  structurizr.StructurizrClientSettings.md  structurizr.md
docs/source/: conf.py  index.rst  reference.rst
examples/: big_bank.py  financial_risk_system.py  getting_started.py  upload_workspace.py
src/structurizr/: __init__.py  _version.py  abstract_base.py  base.py  base_model.py  helpers.py  workspace.py
src/structurizr/api/: __init__.py  api_response.py  structurizr_client.py  structurizr_client_exception.py  structurizr_client_settings.py
src/structurizr/mixin/: __init__.py  childless_mixin.py  model_ref_mixin.py  viewset_ref_mixin.py
src/structurizr/model/: __init__.py  abstract_model.py  code_element.py  code_element_role.py  component.py  container.py  container_instance.py  deployment_element.py  deployment_node.py  element.py  enterprise.py  groupable_element.py  http_health_check.py  implied_relationship_strategies.py  infrastructure_node.py  interaction_style.py  location.py  model.py  model_item.py  person.py  perspective.py  relationship.py  sequential_integer_id_generator.py  software_system.py  software_system_instance.py  static_structure_element.py  static_structure_element_instance.py  tags.py
src/structurizr/view/: __init__.py  abstract_view.py  animation.py  automatic_layout.py  border.py  branding.py  color.py  component_view.py  configuration.py  container_view.py  deployment_view.py  dynamic_view.py  element_style.py  element_view.py  filtered_view.py  font.py  interaction_order.py  orientation.py  paper_size.py  rank_direction.py  relationship_style.py  relationship_view.py  routing.py  sequence_counter.py  sequence_number.py  shape.py  static_view.py  styles.py  system_context_view.py  system_landscape_view.py  terminology.py  vertex.py  view.py  view_order.py  view_set.py  view_sort_order.py
tests/e2e/: test_client.py
tests/integration/: test_api.py  test_grouping.py  test_implied_relationship_strategies.py  test_model_deployment_node_deserialization.py  test_model_element_relationships.py  test_model_elements.py  test_relationship_replication.py  test_workspace_io.py
tests/test_e2e/: test_client.py
tests/test_integration/: test_api.py  test_workspace_io.py
tests/test_unit/: test_abstract_base.py  test_base.py  test_base_model.py  test_helpers.py  test_workspace.py
tests/test_unit/api/: test_api_response.py
tests/test_unit/model/: test_element.py  test_enterprise.py  test_location.py  test_person.py  test_perspective.py  test_software_system.py
tests/test_unit/test_api/: test_structurizr_client.py  test_structurizr_client_settings.py
tests/test_unit/test_model/: test_code_element.py  test_code_element_role.py  test_element.py  test_enterprise.py  test_interaction_style.py  test_model_item.py  test_person.py  test_perspective.py  test_relationship.py  test_software_system.py
tests/test_unit/view/: test_color.py  test_paper_size.py
tests/unit/: test_abstract_base.py  test_helpers.py  test_workspace.py
tests/unit/api/: test_structurizr_client.py  test_structurizr_client_settings.py
tests/unit/model/: test_code_element.py  test_container.py  test_container_instance.py  (+9 more)
(+18 files in other folders)
