[metadata]
name = structurizr-python
url = https://github.com/Midnighter/structurizr-python
download_url = https://pypi.org/project/structurizr-python/
project_urls =
    Source Code = https://github.com/Midnighter/structurizr-python
    Documentation = https://structurizr-python.readthedocs.io
    Bug Tracker = https://github.com/Midnighter/structurizr-python/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Documentation
license = Apache-2.0
description = A Python client package for the Structurizr cloud service and on-premises installation.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    Structurizr
    Structurizr-API
    C4 model
    software architecture
    diagrams-as-code
    diagrams

[options]
zip_safe = True
install_requires =
    depinfo
    httpx ~= 0.16
    importlib_metadata; python_version <'3.8'
    ordered-set
    pydantic >= 1.7.1
    python-dotenv
python_requires = >=3.6
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    pep517
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/structurizr/_version.py
versionfile_build = structurizr/_version.py
tag_prefix =

